# USTHackathon

./: README.md  generate_data.py  notebook.ipynb  predict.py  pyproject.toml  requirements.txt
Kaffehaus/: 2022.csv  2023.csv  2024.csv
Mamta Rasooi/: 2022.csv  2023.csv  2024.csv
Plav/: 2022.csv  2023.csv  2024.csv
Saranva Bhavan/: 2022.csv  2023.csv  2024.csv
Souther Delight/: 2022.csv  2023.csv  2024.csv
Supreme Bakery/: 2022.csv  2023.csv  2024.csv
The Crown & Cutlery/: 2021.csv  2022.csv  2023.csv
The Lime Tree Kitchen/: 2021.csv  2022.csv  2023.csv
The London Larder/: 2021.csv  2022.csv  2023.csv
The Yorkshire Pantry/: 2021.csv  2022.csv  2023.csv
predicted_data/: default.csv
