[tool.poetry]
name = "k-boys-hackathon"
version = "0.1.0"
description = ""
authors = ["The K-Boys"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.2.1"
fastapi = "0.115.12"
h11 = "0.16.0"
holidays = "0.73"
idna = "3.10"
joblib = "1.5.0"
numpy = "2.2.6"
pandas = "2.2.3"
prophet = "1.1.6"
pydantic = "2.11.4"
pydantic_core = "2.33.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
scikit-learn = "1.6.1"
scipy = "1.15.3"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.46.2"
threadpoolctl = "3.6.0"
typing-inspection = "0.4.0"
typing_extensions = "4.13.2"
tzdata = "2025.2"
uvicorn = "0.34.2"
httpx = "^0.28.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
